# backstop

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  readme.md
color-from-hex/: Cargo.toml
color-from-hex/src/: lib.rs
src/: cache.rs  constants.rs  footer.rs  lib.rs  main.rs  menu_view.rs  navbar.rs  queue.rs  settings.rs  songs_view.rs  svg_button.rs  updating_progress_bar.rs
src/discord_rpc/: mod.rs
src/player/: mod.rs
src/queue/: mod.rs
src/saved_state/: media_cache.rs  mod.rs  settings.rs  song_file_info.rs
src/update_checker/: mod.rs
ui/: footer.slint  main-window.slint  types.slint
ui/views/: coverart.slint  firstbuttons.slint  main.slint  onboarding.slint  settings.slint  text.slint  welcome.slint
