[package]
name = "backstop"
version = "0.0.0"
edition = "2024"

[dependencies]
async-compat = "0.2.5"
async-fs = "2.2.0"
audiotags = "0.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
futures-lite = "2.6.1"
image = "0.25.10"
mp3-duration = "0.1.10"
rand = "0.10.0"
rfd = "0.17.2"
rodio = "0.22.2"
serde = "1.0.228"
serde-binary = "0.5.0"
serde_repr = "0.1.20"
slint = { version = "1.15.1", features = [] }
tokio = "1.50.0"
uuid = { version = "1.22.0", features = ["v4"] }

[build-dependencies]
lucide-slint = "0.577.0"
slint-build = "1.15.1"
