[package]
name = "backstop"
version = "1.1.0" # this def needs to be changed
edition = "2024"

[dependencies]
async-fs = "2.2.0"
audiotags = "0.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
iced = { version = "0.14.0", features = ["image", "lazy", "svg", "tokio"] }
image = "0.25.10"
rand = "0.10.1"
rfd = "0.17.2"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["rc"] }
serde-binary = "0.5.0"
serde_repr = "0.1.20"
# serde_repr = "0.1.20"
tokio = { version = "1.52.1", features = ["macros"] }
uuid = { version = "1.23.1", features = ["v4"] }
