[package]
name = "backstop"
description = "a desktop music player built w/ rust"
repository = "https://github.com/iwantpizza10/backstop"
license = "MIT"
version = "2.0.1"
edition = "2024"

[dependencies]
async-fs = "2.2.0"
audiotags = "0.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
color-from-hex = { path = "./color-from-hex" }
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
iced = { version = "0.14.0", features = ["image", "lazy", "svg", "tokio"] }
image = "0.25.10"
rand = "0.10.1"
rfd = "0.17.2"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["rc"] }
serde-binary = "0.5.0"
serde_repr = "0.1.20"
tokio = { version = "1.52.1", features = ["macros"] }
uuid = { version = "1.23.1", features = ["v4"] }

[lints.clippy]
allow_attributes = "warn"
branches_sharing_code = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
clone_on_ref_ptr = "warn"
collapsible_else_if = "warn"
collection_is_never_read = "warn"
comparison_chain = "warn"
elidable_lifetime_names = "warn"
filetype_is_file = "warn"
implicit_clone = "warn"
manual_instant_elapsed = "warn"
needless_collect = "warn"
search_is_some = "warn"
todo = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
